--- a/json1.html
+++ b/json1.html
@@ -1,65 +1,75 @@
-var songList = [
-  {
-    "title": "Bohemian Rhapsody",
-    "artist": "Queen",
-    "genres": ["Rock", "Progressive Rock"],
-    "year": 1975
-  },
-  {
-    "title": "Billie Jean",
-    "artist": "Michael Jackson",
-    "genres": ["Pop", "R&B"],
-    "year": 1982
-  },
-  {
-    "title": "Hotel California",
-    "artist": "Eagles",
-    "genres": ["Rock"],
-    "year": 1977
-  },
-  {
-    "title": "Smooth",
-    "artist": "Santana featuring Rob Thomas",
-    "genres": ["Rock", "Latin"],
-    "year": 1999
-  },
-  {
-    "title": "Rolling in the Deep",
-    "artist": "Adele",
-    "genres": ["Pop", "Soul"],
-    "year": 2010
-  },
-  {
-    "title": "Stairway to Heaven",
-    "artist": "Led Zeppelin",
-    "genres": ["Rock"],
-    "year": 1971
-  },
-  {
-    "title": "Imagine",
-    "artist": "John Lennon",
-    "genres": ["Pop", "Rock"],
-    "year": 1971
-  },
-  {
-    "title": "Thriller",
-    "artist": "Michael Jackson",
-    "genres": ["Pop", "R&B"],
-    "year": 1982
-  },
-  {
-    "title": "Sweet Child o' Mine",
-    "artist": "Guns N' Roses",
-    "genres": ["Rock"],
-    "year": 1987
-  },
-  {
-    "title": "I Will Always Love You",
-    "artist": "Whitney Houston",
-    "genres": ["Pop", "R&B"],
-    "year": 1992
-  }
-];
+<!DOCTYPE html>
+<html>
+<head>
+  <title>JSON Song List</title>
+  <script>
+    var songList = [
+      {
+        "title": "Bohemian Rhapsody",
+        "artist": "Queen",
+        "genres": ["Rock", "Progressive Rock"],
+        "year": 1975
+      },
+      {
+        "title": "Billie Jean",
+        "artist": "Michael Jackson",
+        "genres": ["Pop", "R&B"],
+        "year": 1982
+      },
+      {
+        "title": "Hotel California",
+        "artist": "Eagles",
+        "genres": ["Rock"],
+        "year": 1977
+      },
+      {
+        "title": "Smooth",
+        "artist": "Santana featuring Rob Thomas",
+        "genres": ["Rock", "Latin"],
+        "year": 1999
+      },
+      {
+        "title": "Rolling in the Deep",
+        "artist": "Adele",
+        "genres": ["Pop", "Soul"],
+        "year": 2010
+      },
+      {
+        "title": "Stairway to Heaven",
+        "artist": "Led Zeppelin",
+        "genres": ["Rock"],
+        "year": 1971
+      },
+      {
+        "title": "Imagine",
+        "artist": "John Lennon",
+        "genres": ["Pop", "Rock"],
+        "year": 1971
+      },
+      {
+        "title": "Thriller",
+        "artist": "Michael Jackson",
+        "genres": ["Pop", "R&B"],
+        "year": 1982
+      },
+      {
+        "title": "Sweet Child o' Mine",
+        "artist": "Guns N' Roses",
+        "genres": ["Rock"],
+        "year": 1987
+      },
+      {
+        "title": "I Will Always Love You",
+        "artist": "Whitney Houston",
+        "genres": ["Pop", "R&B"],
+        "year": 1992
+      }
+    ];
 
-var jsonData = JSON.stringify(songList);
-console.log(jsonData);
+    var jsonData = JSON.stringify(songList);
+    console.log(jsonData);
+  </script>
+</head>
+<body>
+</body>
+</html>
