--- a/json2.html
+++ b/json2.html
@@ -5,16 +5,17 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
     $(document).ready(function() {
-      $.get("songlist.json", function(data) {
-        var songList = data.songList;
-        
+      $.getJSON("songlist.json", function(data) {
+        var songList = data;
+        alert(songList);
         $.each(songList, function(index, song) {
+        
           var genres = song.genres.join(", ");
           var output = "<p>" +
-            "<h1>Title:</h1> " + song.title + "<br>" +
+            song.title + "<br>" +
             "<h1>Artist:</h1> " + song.artist + "<br>" +
             "<h1>Genres:</h1> " + genres + "<br>" +
-            "<h1>Released:</h1> " + song.year +
+            "<h1>Released</h1> " + song.year +
             "</p>";
           $("body").append(output);
         });
@@ -25,4 +26,3 @@
 <body>
 </body>
 </html>
-
